--- a/AndroidStudio/apps/MyFirstApp/app/src/main/res/layout/activity_display_message.xml
+++ b/AndroidStudio/apps/MyFirstApp/app/src/main/res/layout/activity_display_message.xml
@@ -7,7 +7,8 @@
     tools:context="com.example.zephyr.myfirstapp.DisplayMessageActivity">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView" />
 
 
 </RelativeLayout>
