--- a/AndroidStudio/apps/TutorialHTML/app/src/main/res/layout/activity_login.xml
+++ b/AndroidStudio/apps/TutorialHTML/app/src/main/res/layout/activity_login.xml
@@ -6,11 +6,14 @@
     android:paddingLeft="50dp"
     android:paddingRight="50dp"
     android:paddingTop="50dp"
+    android:paddingBottom="50dp"
     tools:context=".LoginActivity">
 
     <EditText
         android:id="@+id/usernameText"
         android:hint="@string/usernameHint"
+        android:textColorHint="@color/hint_foreground_material_light"
+        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true" />
@@ -18,6 +21,7 @@
     <EditText
         android:id="@+id/passwordText"
         android:hint="@string/passwordHint"
+        android:textColorHint="@color/hint_foreground_material_light"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,8 +33,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send"
-        android:layout_below="@id/passwordText"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/passwordText"
         android:onClick="sendCredentials" />
 
     <Button
@@ -38,9 +42,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel"
-        android:layout_below="@+id/passwordText"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/passwordText"
         android:onClick="clearCredentials" />
 
+    <CheckBox
+        android:id="@+id/rememberMeCheckBox"
+        android:text="@string/rememberMeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/passwordText"
+        android:layout_alignLeft="@+id/passwordText" />
+
+    <CheckBox
+        android:id="@+id/skipCheckBox"
+        android:text="@string/skipText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rememberMeCheckBox"
+        android:layout_alignLeft="@+id/passwordText" />
 
 </RelativeLayout>
