--- a/AndroidStudio/apps/TutorialHTML/app/src/main/res/values/styles.xml
+++ b/AndroidStudio/apps/TutorialHTML/app/src/main/res/values/styles.xml
@@ -5,4 +5,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="PersonalTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="android:textSize">25sp</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:textStyle">bold|italic</item>
+
+    </style>
 </resources>
