HTTP activity test

--- a/AndroidStudio/apps/MyBikePlace/app/src/main/res/layout/activity_personal.xml
+++ b/AndroidStudio/apps/MyBikePlace/app/src/main/res/layout/activity_personal.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.zephyr.tutorialhtml.PersonalActivity">
+    tools:context="com.dev.mybp.mybikeplace.PersonalActivity">
 
     <TextView
         android:id="@+id/credentialText"
@@ -11,8 +11,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         style="@style/PersonalTheme" />
-
-
-
 
 </RelativeLayout>
